# skill

kb-mcp-server/: pyproject.toml
kb-mcp-server/kb_mcp_server/: config.py  embeddings.py  indexer.py
skill-to-course/: README.md  SKILL.md
skill-to-course/examples/: demo-course.example.html
skill-to-course/references/: html-template.md  visual-patterns.md
知识沉淀/: SKILL.md  readme.md
知识沉淀/kb-mcp-server/: config.yaml
知识沉淀/kb-mcp-server/kb_mcp_server/: __init__.py  __main__.py  server.py
